Implem RF07 e RF08 + Fix outros requisitos

--- a/src/main/java/com/uberpb/app/.gitignore
+++ b/src/main/java/com/uberpb/app/.gitignore
@@ -13,3 +13,6 @@
 /ProvedorDependencias.class
 /AplicacaoCLI.class
 /ComandoFuncional.class
+/EstimativaCorridaComando.class
+/MotoristaVerOfertasComando.class
+/CompletarCadastroMotoristaComando.class
