--- a/src/main/java/com/uberpb/repository/.gitignore
+++ b/src/main/java/com/uberpb/repository/.gitignore
@@ -9,3 +9,5 @@
 /ImplRepositorioCorridaArquivo.class
 /RepositorioCorrida.class
 /BaseRepositorioArquivo.class
+/RepositorioOferta.class
+/ImplRepositorioOfertaArquivo.class
