--- a/src/main/java/com/uberpb/service/.gitignore
+++ b/src/main/java/com/uberpb/service/.gitignore
@@ -2,3 +2,7 @@
 /ServicoCadastro.class
 /ServicoValidacaoMotorista.class
 /ServicoCorrida.class
+/CalculadoraPrecoCorrida.class
+/ServicoCorrida$EstimativaCorrida.class
+/ServicoOferta.class
+/EstimativaCorrida.class
