RF17 + RF18 + Ajustes no sistema

--- a/src/main/java/com/uberpb/app/.gitignore
+++ b/src/main/java/com/uberpb/app/.gitignore
@@ -16,3 +16,5 @@
 /EstimativaCorridaComando.class
 /MotoristaVerOfertasComando.class
 /CompletarCadastroMotoristaComando.class
+/AcompanharCorridaComando.class
+/OtimizarRotaComando.class
