--- a/src/main/java/com/uberpb/service/.gitignore
+++ b/src/main/java/com/uberpb/service/.gitignore
@@ -6,3 +6,9 @@
 /ServicoCorrida$EstimativaCorrida.class
 /ServicoOferta.class
 /EstimativaCorrida.class
+/EstimativaChegada.class
+/Rota.class
+/RotaOtimizada.class
+/ServicoDirecionamentoCorrida.class
+/ServicoLocalizacao.class
+/ServicoOtimizacaoRota.class
